--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Notice: Copyright 2017 Git.Training
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A Great Website Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			I'm not sure what will go here, but I'm sure it will be nice.
+			SOme interesting stuff goes here.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Jason Taylor 2017</p>
+		<p>&copy; Git Training 2017</p>
 	</footer>
 </body>
 </html>
