--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from master branch.
 -->
 <head>
-	<title>Silly Changes on Master</title>
+	<title>Lots of Trouble Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Junk Filler content -->
 		<p>
-			Just stuff for now, Not sure if we would replace this or not.
+			Just nothin' but trouble.
 		</p>
 	</main>
 	<footer class="container">
