--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Notice: Copyright 2017 Git.Training
 -->
 <head>
-	<title>Lots of Trouble, in a little repo</title>
+	<title>Updating Title for Stash Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -15,10 +15,9 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler content -->
-		<p>
-			Just nothin' but trouble.
-		</p>
+	<p>
+		Adding more important content here.
+	</p>
 	</main>
 	<footer class="container">
 		<p>&copy; 2017 Git,Training, All rights reserved.</p>
